# neobox

./: Makefile  README.md  main.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  state.py
neobox/: api.py  app.py  audio.py  cli.py  config.py
neobox/cmd/: clear_cache.py  list.py  login.py  logout.py  pause.py  play.py  search.py  stop.py
neobox/ui/: layout.py  login.py  loginbox.py  message_box.py  sizing.py  user.py
