[tool.poetry]
name = "neobox"
version = "0.1.0"
description = "NetEase Cloud Music Client for command line"
authors = ["weak_ptr <weak_ptr@outlook.com>"]
license = "MIT"

[[tool.poetry.source]]
name = 'tuna'
url = 'https://pypi.tuna.tsinghua.edu.cn/simple'
default = true

[tool.autopep8]
max_line_length = 120

[tool.poetry.dependencies]
python = "^3.6"
nemcore = "^0.1.8"
click = "^7.1.2"
rich = "^9.8.2"
pymad = "^0.10"
simpleaudio = "^1.0.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
wheel="^0.36.2"
pylint="^2.6.0"
isort="^5.7.0"
mypy="^0.790"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
